--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -36,3 +36,25 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+*, *:before, *:after {box-sizing:  border-box !important;}
+
+.row {
+ -moz-column-width: 18em;
+ -webkit-column-width: 18em;
+ -moz-column-gap: 1em;
+ -webkit-column-gap:1em; 
+  
+}
+
+.item {
+ display: inline-block;
+ padding:  .25rem;
+ width:  100%; 
+ text-align: center;
+}
+
+.well {
+ position:relative;
+ display: block;
+}
