--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -169,3 +169,12 @@ body {
 .userContainer {
   float: left;
 }
+
+.jumbotron {
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+.jumbotron .btn {
+  padding: 14px 24px;
+  font-size: 21px;
+}
