--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -163,11 +163,56 @@ body {
   height: 200px;
 }
 
-.opponentContainer {
+#opponentContainer {
   float: right;
+  display: inline-block;
+  background-color: #ccc;
+
+  animation: attack 1000ms paused;
+  zoom: 1;
+  transition: all linear 0.3s;
+  animation-timing-function: linear;
 }
-.userContainer {
+
+@keyframes attack {
+  0% { background-color: #ccc; transform: scale(1) rotate(0deg);}
+  50% { background-color: #ff7f7f; transform: scale(1.5) rotate(180deg);}
+  100% { background-color: red;  transform: scale(2) rotate(360deg);}
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
+#userContainer {
   float: left;
+  display: inline-block;
+  background-color: #ccc;
+
+  animation: attack2 1000ms paused;
+  zoom: 1;
+  transition: all linear 0.3s;
+  animation-timing-function: linear;
+}
+
+@keyframes attack2 {
+  0% { background-color: #ccc; transform: scale(1) rotate(0deg);}
+  50% { background-color: #A6D785; transform: scale(1.5) rotate(180deg);}
+  100% { background-color: green;  transform: scale(2) rotate(360deg);}
 }
 
 .jumbotron {
