--- a/client/styles.css
+++ b/client/styles.css
@@ -30,17 +30,23 @@
   border-top-right-radius: 0;
 }
 
+.form-signin input[type="classroomname"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
 .avatarRow {
  -moz-column-width: 18em;
  -webkit-column-width: 18em;
  -moz-column-gap: 1em;
- -webkit-column-gap:1em; 
+ -webkit-column-gap:1em;
 }
 
 .item {
  display: inline-block;
  padding:  .25rem;
- width:  100%; 
+ width:  100%;
  text-align: center;
 }
 
@@ -184,7 +190,7 @@ body {
   10%, 90% {
     transform: translate3d(-1px, 0, 0);
   }
-  
+
   20%, 80% {
     transform: translate3d(2px, 0, 0);
   }
